# message-gateway

./: Cargo.toml  Dockerfile  README.md  config.toml  docker-compose.yml  init_setup.sh
config/mosquitto/: mosquitto.conf
config/redis/: redis.conf
src/: config.rs  main.rs  mqtt_client.rs  pipeline.rs  redis_client.rs
src/messenger/: cloud_client.rs  mod.rs  mqtt_client.rs  mqtt_client_v5.rs  redis_client.rs  sink.rs
