[package]
name = "message-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
rumqttc = "0.14"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11.3"
anyhow = "1.0"
redis = { version = "0.25", features = ["tokio-comp"] }
futures-util = { version = "0.3.31", default-features = false, features = [
  "std",
  "sink",
] }
async-trait = "0.1.88"